--- a/META.yml
+++ b/META.yml
@@ -1,33 +1,26 @@
 ---
 abstract: 'Message-oriented interface to MongoDB'
 author:
-  - 'Dana M. Diederich, C<< <diederich at gmail.com> >>'
-  - 'Dana M. Diederich <diederich@gmail.com>'
+  - 'Dana M. Diederich <dana@realms.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.59
-  MongoDB: 0
-  Test::More: 0
+  Data::Dumper: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.59
-  Module::Install: 0
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
-license: artistic2
+  ExtUtils::MakeMaker: 0
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Message-MongoDB
-no_index:
-  directory:
-    - inc
-    - t
 requires:
   MongoDB: 0
-  perl: 5.6.0
+  Test::More: 0
+  perl: 5.006
+  strict: 0
+  warnings: 0
 resources:
   bugtracker: https://github.com/dana/perl-Message-MongoDB/issues
-  homepage: https://metacpan.org/module/Message::MongoDB
-  license: http://www.perlfoundation.org/artistic_license_2_0
-  repository: git://github.com/dana/perl-Message-MongoDB.git
-version: 0.1
+  homepage: https://github.com/dana/perl-Message-MongoDB
+  repository: https://github.com/dana/perl-Message-MongoDB.git
+version: 1.142810
